--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/dckc/RChain-API/issues"
   },
-  "homepage": "https://github.com/dckc/RChain-API#readme"
+  "homepage": "https://github.com/dckc/RChain-API#readme",
+  "dependencies": {
+    "grpc": "^1.13.1"
+  }
 }
