--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "RChain client for node.js",
   "main": "rnodeAPI.js",
   "scripts": {
-    "test": "node rnodeAPI.js"
+    "test": "node test/testRSON.js"
   },
   "repository": {
     "type": "git",
@@ -27,8 +27,9 @@
   },
   "homepage": "https://github.com/dckc/RChain-API#readme",
   "dependencies": {
-    "grpc": "^1.13.1",
-    "testjs": "^1.0.4"
+    "grpc": "^1.13.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "testjs": "^1.0.4"
+  }
 }
