sync .proto with rchain/rchain 7c3500a38920dac143be95d30c420d06bcd6b9ec

--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -10,7 +10,7 @@ realclean:
 	rm -rf $(PROTO_SRC) *.proto
 
 RAW_GH=https://raw.githubusercontent.com
-R_SRC=$(RAW_GH)/rchain/rchain/master
+R_SRC=$(RAW_GH)/rchain/rchain/dev
 
 CasperMessage.proto:
 	$(WGET) -O $@ $(R_SRC)/models/src/main/protobuf/CasperMessage.proto
