--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "homepage": "https://github.com/dckc/RChain-API#readme",
   "dependencies": {
-    "grpc": "^1.13.1"
+    "grpc": "^1.13.1",
+    "@grpc/proto-loader": "^0.3.0"
   },
   "devDependencies": {
     "testjs": "^1.0.4"
