protobuf: partially automate flow type annotations
via typescript

--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -3,6 +3,10 @@
 PERL=perl
 WGET=wget
 PBJS=../node_modules/.bin/pbjs
+PBTS=../node_modules/.bin/pbts
+
+# npm install -g flowgen
+FLOWGEN=flowgen
 
 # REV=v0.6.1
 # REV=master
@@ -36,3 +40,22 @@ RhoTypes.proto:
 google/protobuf/empty.proto:
 	mkdir -p google/protobuf
 	$(WGET) -O $@ $(RAW_GH)/google/protobuf/v3.5.1/src/google/protobuf/empty.proto
+
+
+flowtyped: interfaces/RhoTypes.js
+
+RhoTypes.d.ts: RhoTypes.js
+	$(PBTS) -o $@ --no-comments $<
+
+interfaces/RhoTypes.js: RhoTypes.d.ts
+	mkdir -p interfaces
+	$(FLOWGEN) -o $@ $<
+	$(PERL) -i.bak -pe 's/declare interface /interface /; s/ mixins / implements /' $@
+
+
+RhoTypes.js:
+	$(PBJS) -t static-module -w commonjs --keep-case -o $@ RhoTypes.proto
+
+clean:
+	rm -rf messages.json messages.d.ts
+
