code style: lint
  - oops! top-level .js files weren't included in `npm run lint`
  - use .eslintrc.yaml from RSign
    - use .yaml format rather than goofy .json-with-comments

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "node test/testRHOCore.js; node test/testRNode.js; node test/testSigning.js",
     "integrationTest": "node rnodeAPI.js",
-    "lint": "eslint **/*.js --format unix --ignore-pattern node_modules/ --ignore-pattern protobuf/"
+    "lint": "eslint *.js **/*.js --format unix --ignore-pattern node_modules/ --ignore-pattern protobuf/"
   },
   "repository": {
     "type": "git",
