use @grpc/proto-loader at "link time"
  - Treat protoLoader like require() rather than
    as a powerful runtime capability.
  - cite source for load options
  - don't ignore downloaded protobuf stuff
  - mark static codegen WIP

fixes https://github.com/JoshOrndorff/RChain-API/issues/10

--- a/protobuf/Makefile
+++ b/protobuf/Makefile
@@ -13,12 +13,16 @@ REV=dev
 
 PROTO_SRC=CasperMessage.proto RhoTypes.proto google/protobuf/empty.proto
 
+download: $(PROTO_SRC)
+
+
+## static codegen (WIP)
 static: messages.js
 
 messages.json:
 	$(PBJS) -t json --keep-case -o $@ $(PROTO_SRC)
 
-messages.js:
+messages.js: $(PROTO_SRC)
 	$(PBJS) -t static-module -w commonjs --keep-case -o $@ $(PROTO_SRC)
 
 update: $(PROTO_SRC)
@@ -39,7 +43,6 @@ RhoTypes.proto:
 google/protobuf/empty.proto:
 	mkdir -p google/protobuf
 	$(WGET) -O $@ $(RAW_GH)/google/protobuf/v3.5.1/src/google/protobuf/empty.proto
-
 
 flowtyped: interfaces/RhoTypes.js
 
