--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
   },
   "homepage": "https://github.com/dckc/RChain-API#readme",
   "dependencies": {
-    "grpc": "^1.13.1",
     "@grpc/proto-loader": "^0.3.0",
+    "blake2": "^2.0.1",
+    "grpc": "^1.13.1",
+    "js-sha3": "^0.8.0",
     "protobufjs": "^6.8.8",
     "remote-origin-url": "^1.0.0",
     "tweetnacl": "^1.0.0"
