--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "RChain client for node.js",
   "main": "rnodeAPI.js",
   "scripts": {
+    "testAll": "npm run check && npm run integrationTest",
+    "check": "npm run test && npm run lint && npm run flow-check",
     "test": "node test/testRHOCore.js; node test/testRNode.js; node test/testSigning.js",
-    "integrationTest": "node rnodeAPI.js",
+    "integrationTest": "node test/testRNode.js --net",
     "flow-check": "flow check --from emacs",
     "flow-status": "flow status --from emacs",
     "lint": "eslint *.js **/*.js --format unix --ignore-pattern interfaces/ --ignore-pattern node_modules/ --ignore-pattern protobuf/"
