--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "rchain-api",
-  "version": "0.7.1-beta.2",
+  "version": "0.7.1-beta.3",
   "description": "RChain client for node.js",
-  "main": "rnodeAPI.js",
+  "main": "index.js",
   "scripts": {
     "testAll": "npm run check && npm run integrationTest",
     "check": "npm run test && npm run lint && npm run flow-check",
