--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 cache:
   directories:
     - "node_modules"
+    - "rclient/node_modules"
+before_script:
+  # For now, let's share flow settings.
+  - cd rclient; npm install
 script:
   - npm test
   - npm run flow-check
