--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "RChain client for node.js",
   "main": "index.js",
   "scripts": {
-    "postinstall": "cd rclient; npm install",
+    "$note": [
+      "--no-package-lock is to avoid ENOENT in staging",
+      "https://github.com/npm/npm/issues/20119",
+      "https://npm.community/t/issue-npm-install-with-local-packages-and-symlinks-enoent/518/4"
+    ],
+    "postinstall": "cd rclient; npm install --no-package-lock",
     "testAll": "npm run check && npm run integrationTest",
     "check": "npm run test && npm run lint && npm run flow-check",
     "test": "node test/testRHOCore.js; node test/testRNode.js; node test/testSigning.js",
