--- a/rclient/package.json
+++ b/rclient/package.json
@@ -14,6 +14,7 @@
     "rchain-api": "file:..",
     "read": "^1.0.7",
     "scrypt.js": "^0.3.0",
-    "tweetnacl": "^1.0.0"
+    "tweetnacl": "^1.0.0",
+    "uuid": "^3.3.2"
   }
 }
