--- a/rclient/package.json
+++ b/rclient/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/main.js",
+  "bin": {
+    "rclient": "src/main.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
