--- a/rclient/package.json
+++ b/rclient/package.json
@@ -12,6 +12,7 @@
   "author": "Dan Connolly",
   "license": "Apache-2.0",
   "dependencies": {
+    "base32-encoding": "^1.0.0",
     "docopt": "^0.6.2",
     "grpc": "^1.17.0",
     "rchain-api": "file:..",
