--- a/rclient/package.json
+++ b/rclient/package.json
@@ -21,5 +21,8 @@
     "secp256k1": "^3.6.1",
     "tweetnacl": "^1.0.0",
     "uuid": "^3.3.2"
+  },
+  "devDependencies": {
+    "flow-bin": "^0.91.0"
   }
 }
