protobuf naming for showBlocks, showBlock, previewPrivateNames
  - RNode:
    - doDeploy etc. are instance methods, not static
    - un-document deprecated methods
    - tweak GRPCAccess type
    - punt previewPrivateChannels in favor of RHOCore.fromIds
    - testRNode: fix blockHash test (also in README)
  - update testProxy for signing; add @flow
  - docs/config.yml: toward API doc order
    - only in --serve, not in build yet
  - Hex: include in docs
    - un-export SignDeployment
  - makeProxy, sendCall: move exports out of the way so docs get flow types

--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "testAll": "npm run check && npm run integrationTest",
     "build:docs": "documentation build -f md --github  --sort-order alpha index.js src/**.js --shallow -o docs/index.md && markdown-doctest",
     "build:docs-html": "documentation build -f html --github  --sort-order alpha index.js src/**.js --shallow -o docs/",
-    "doc-watch": "documentation serve --watch index.js src/**.js --shallow",
-    "check": "npm run test && npm run lint && npm run flow-check",
+    "doc-watch": "documentation serve --watch index.js --config docs/config.yml src/**.js --shallow",
+    "check": "npm run test && npm run build:docs && npm run lint && npm run flow-check",
     "test": "tape test/**/*.js && markdown-doctest",
     "integrationTest": "node test/testRNode.js --net && node test/liveRHOCoreTest.js && node test/liveRNodeTest.js",
     "flow-check": "flow check --from emacs",
