--- a/package.json
+++ b/package.json
@@ -55,12 +55,16 @@
   },
   "devDependencies": {
     "documentation": "^8.1.2",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^13.0.0",
-    "eslint-plugin-import": "^2.13.0",
-    "typescript": "^4.0.2",
+    "eslint": "^7.9.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "markdown-doctest": "^0.9.1",
-    "tape": "^4.10.1"
+    "prettier": "^2.1.1",
+    "tape": "^4.10.1",
+    "typescript": "^4.0.2"
   },
   "TODO": {
     "documentation": "^8.0.2"
