--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rchain-api",
-  "version": "0.9.2-beta.4",
+  "version": "0.9.25.4",
   "description": "RChain client for node.js",
   "main": "index.js",
   "$note": [
@@ -9,14 +9,16 @@
     "https://npm.community/t/issue-npm-install-with-local-packages-and-symlinks-enoent/518/4"
   ],
   "scripts": {
-    "testAll": "npm run check && npm run integrationTest",
+    "test": "ava --verbose",
+    "test:md": "markdown-doctest",
+    "lint-fix": "yarn lint --fix",
+    "lint-check": "yarn lint",
+    "lint": "yarn lint:types && yarn lint:eslint",
+    "lint:eslint": "eslint '**/*.js'",
+    "lint:types": "tsc -p jsconfig.json",
     "build:docs": "documentation build -f md --github  --sort-order alpha index.js src/**.js --shallow -o docs/index.md && markdown-doctest",
     "build:docs-html": "documentation build -f html --github  --sort-order alpha index.js src/**.js --shallow -o docs/",
-    "doc-watch": "documentation serve --watch index.js --config docs/config.yml src/**.js --shallow",
-    "check": "npm run test && npm run build:docs && npm run lint && npm run flow-check",
-    "test": "tape test/**/*.js && markdown-doctest",
-    "integrationTest": "node test/testRNode.js --net && node test/liveRHOCoreTest.js && node test/liveRNodeTest.js",
-    "lint": "eslint *.js **/*.js --format unix --ignore-pattern interfaces/ --ignore-pattern node_modules/ --ignore-pattern protobuf/ --ignore-pattern '!.markdown-doctest-setup.js'"
+    "doc-watch": "documentation serve --watch index.js --config docs/config.yml src/**.js --shallow"
   },
   "config": {
     "host": "localhost",
@@ -28,7 +30,6 @@
   },
   "keywords": [
     "rchain",
-    "grpc",
     "blockchain",
     "rholang"
   ],
@@ -43,23 +44,24 @@
   },
   "homepage": "https://github.com/rchain-community/RChain-API#readme",
   "dependencies": {
+    "@agoric/eventual-send": "^0.11.1-dev.2",
     "blake2": "^4.0.1",
+    "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
+    "elliptic": "^6.5.3",
+    "google-protobuf": "^3.13.0",
     "js-sha3": "^0.8.0",
-    "remote-origin-url": "^1.0.0",
+    "ses": "^0.10.3",
     "tweetnacl": "^1.0.0"
   },
   "devDependencies": {
-    "documentation": "^8.1.2",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "markdown-doctest": "^0.9.1",
     "prettier": "^2.1.1",
-    "tape": "^4.10.1",
     "typescript": "^4.0.2"
   },
   "TODO": {
