--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "0.9.25.4",
   "description": "RChain client for node.js",
   "main": "index.js",
-  "$note": [
-    "--no-package-lock is to avoid ENOENT in staging",
-    "https://github.com/npm/npm/issues/20119",
-    "https://npm.community/t/issue-npm-install-with-local-packages-and-symlinks-enoent/518/4"
-  ],
   "scripts": {
     "test": "ava --verbose",
     "test:md": "markdown-doctest",
@@ -44,15 +39,11 @@
   },
   "homepage": "https://github.com/rchain-community/RChain-API#readme",
   "dependencies": {
-    "@agoric/eventual-send": "^0.11.1-dev.2",
-    "blake2": "^4.0.1",
     "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "elliptic": "^6.5.3",
     "google-protobuf": "^3.13.0",
-    "js-sha3": "^0.8.0",
-    "ses": "^0.10.3",
-    "tweetnacl": "^1.0.0"
+    "js-sha3": "^0.8.0"
   },
   "devDependencies": {
     "eslint": "^7.9.0",
