--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-sha3": "^0.8.0"
   },
   "devDependencies": {
+    "@types/node": "^14.11.2",
     "ava": "^3.13.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb": "^18.2.0",
