--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.25.4",
   "description": "RChain client for node.js",
   "main": "index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "check": "yarn test && yarn lint",
     "test": "ava --verbose",
