--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "elliptic": "^6.5.3",
+    "ethereumjs-util": "^7.0.7",
     "google-protobuf": "^3.13.0",
     "js-sha3": "^0.8.0"
   },
