--- a/package.json
+++ b/package.json
@@ -50,17 +50,19 @@
   },
   "homepage": "https://github.com/rchain-community/RChain-API#readme",
   "dependencies": {
+    "@jessie.js/eslint-plugin": "^0.1.3",
     "blakejs": "^1.1.0",
     "bs58": "^4.0.1",
     "elliptic": "^6.5.4",
     "ethereumjs-util": "^7.0.7",
     "google-protobuf": "^3.13.0",
+    "jessie.js": "^0.2.0",
     "js-sha3": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
     "ava": "^3.13.0",
-    "eslint": "^7.9.0",
+    "eslint": "^8.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -69,6 +71,15 @@
     "esm": "^3.2.25",
     "prettier": "^2.1.1",
     "typescript": "^4.0.2"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 6
+    },
+    "extends": [
+      "plugin:@jessie.js/recommended"
+    ]
   },
   "TODO": {
     "documentation": "^8.0.2"
